--- a/index.html
+++ b/index.html
@@ -4,44 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Charity Water Landing Page</title>
+    <!-- Link to the CSS file for styling -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Hero Section: This is the main banner at the top of the page -->
+    <!-- Hero Section: Full-screen background image with centered content -->
     <section class="hero">
-        <!-- Main headline -->
-        <h1>Clean Water for Everyone</h1>
-        <!-- Subheadline -->
-        <p>Join us in bringing safe, clean water to communities in need.</p>
+        <!-- Big headline -->
+        <h1>CLEAN WATER, REAL IMPACT</h1>
+        <!-- Short subheadline -->
+        <p>Together, we can bring safe water to every community.</p>
+        <!-- Join button -->
+        <a href="#" class="join-button">JOIN THE MOVEMENT</a>
     </section>
 
-    <!-- Story Section: This tells the story of the nonprofit -->
+    <!-- Story Section: Shows the impact of clean water -->
     <section class="story">
-        <h2>Our Story</h2>
+        <!-- Story image -->
+        <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=600&q=80" alt="Smiling child with clean water" class="story-image">
+        <!-- Story text -->
         <p>
-         
+            Clean water changes everything. Children can go to school, families stay healthy, and communities thrive. Your support helps bring hope and opportunity to those who need it most.
+        </p>
     </section>
 
-    <!-- Real-World Impact Story Section -->
-    <section class="impact-story">
-        <!-- Section headline -->
-        <h2>Real Impact: Meet Amina</h2>
-        <!-- Container for image and text -->
-        <div class="impact-content">
-            <!-- Impact image -->
-            <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=600&q=80" alt="Amina smiling with clean water" class="impact-image">
-            <!-- Impact story text -->
-            <p>
-                Amina used to walk miles every day to collect water for her family. Thanks to your support, her village now has a clean water well. Amina can go to school and her family is healthier and happier.
-            </p>
-        </div>
-    </section>
-
-    <!-- Call-to-Action Section: This encourages visitors to take action -->
+    <!-- Call-to-Action Section: Encourages visitors to donate -->
     <section class="call-to-action">
-        <h2>Make a Difference</h2>
-        <p>Your support can help save lives. Every donation brings us closer to a world with clean water for all.</p>
-        <a href="#" class="donate-button">Donate Now</a>
+        <h2>Make a Difference Today</h2>
+        <p>Your donation brings clean, safe water to people in need. Every gift matters.</p>
+        <a href="#" class="donate-button">DONATE NOW</a>
     </section>
 </body>
 </html>
